# llama-cpp-rocm-gfx906

./: CMakeLists.txt  DEVELOPMENT.md  README.md  build-rocm63-gfx906.sh  ggml-cuda-tp.cu  ggml-cuda-tp.h  ggml-rccl.cpp  ggml-rccl.h  hip-comm.cpp  hip-comm.h  test_rccl.cpp
ggml-tensor-parallel/: ggml-tensor-parallel.cpp  ggml-tp-comm.cpp  ggml-tp-comm.h  ggml-tp-shard.h
ggml/include/: ggml-tensor-parallel.h
ggml/src/ggml-tensor-parallel/: CMakeLists.txt  ggml-tp-shard.cpp
multi-gpu-launcher/: README.md  multi-gpu-launcher.sh  multi-gpu-proxy.py
patches/: ggml-hip-tensor-parallel.patch  parallel-gpus-v1.patch
src/: llama-tensor-parallel.cpp  llama-tensor-parallel.h
src/ggml-tensor-parallel/: CMakeLists.txt  ggml-tensor-parallel.cpp  ggml-tp-comm.cpp  ggml-tp-shard.cpp
src/ggml/include/: ggml-cuda-tp.h  ggml-tensor-parallel.h
src/ggml/include/ggml-tensor-parallel/: ggml-tp-comm.h  ggml-tp-shard.h
src/multi-gpu/: ggml-multigpu.c  multi-gpu-scheduler.h
test/: CMakeLists.txt
